--- a/css/estilo.css
+++ b/css/estilo.css
@@ -106,7 +106,7 @@ section {
 
 footer {
 
-    background-color: white;
+    background-color: #F7F6F4;
     color: black;
     padding: 20px 0;
 }
@@ -116,15 +116,15 @@ footer {
 .footer-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 1 auto 15;
 }
 /*inicio da sessão rodape*/
 .footer-section {
   flex: 1;
-  margin: 10px;
+  margin: 15px;
+  margin-left: 5px;
 }
 /*subtitulo do rodape*/
 .footer-section h4, {
@@ -133,7 +133,7 @@ footer {
 /*lista rodape*/
 .footer-section ul {
   list-style: none;
-  padding: 0;
+  padding: 0px;
 }
 
 .footer-section ul li {
